--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3 class="col-3"> Aynur Rakhmanov </h3>
         </div>
         <div class="row">
-            <a href=""> XSL styles result </a>
+            <a href="lab1/res/xml.xml"> XSL styles result </a>
         </div>
     </div>
 </body>
