--- a/index.html
+++ b/index.html
@@ -7,14 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> WT Labs </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <h3 class="col-3"> Aynur Rakhmanov </h3>
+    <div class="container p-5">
+        <div class="row justify-content-center p-5">
+            <h3 class="col text-center"> Aynur Rakhmanov </h3>
         </div>
-        <div class="row">
-            <a href="lab1/res/xml.xml"> XSL styles result </a>
+        <div class="row p-5">
+            <div class="col">
+                <p class=""> Task 1 </p>
+                <button class="task-btn btn btn-primary" >
+                    <a href="lab1/res/xml.xml"> XSL styles result </a>
+                </button>
+            </div>
+            <div class="col">
+                <p class=""> Task 2</p>
+                <button class="task-btn btn btn-primary" >
+                    <a href="lab1/res/xml.xml"> SVG results </a>
+                </button>
+            </div>
         </div>
     </div>
 </body>
