--- a/index.html
+++ b/index.html
@@ -1,33 +1,59 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> WT Labs </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title> WT Labs </title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container p-5">
-        <div class="row justify-content-center p-5">
-            <h3 class="col text-center"> Aynur Rakhmanov </h3>
-        </div>
-        <div class="row p-5">
-            <div class="col">
-                <p class=""> Task 1 </p>
-                <button class="task-btn btn btn-primary" >
-                    <a href="lab1/res/xml.xml"> XSL styles result </a>
+<div class="container p-5">
+  <div class="row justify-content-center p-5">
+    <h3 class="col text-center"> Aynur Rakhmanov </h3>
+  </div>
+  <div class="row p-5">
+    <div class="col">
+      <div class="list-group" data-name="Task list by date">
+        <div class="list-group-item">
+
+          <p class="h4"><a href="https://kodaktor.ru/g/xsl_intro"> 01.03.22 </a></p>
+          <div class="list-group">
+            <div class="list-group-item container">
+              <div class="row">
+                <button class="col-1 btn btn-link">
+                  <a class="h5" href="http://kodaktor.ru/sigma.pdf"> Task 1 </a>
                 </button>
-            </div>
-            <div class="col">
-                <p class=""> Task 2</p>
-                <button class="task-btn btn btn-primary" >
-                    <a href="lab1/res/xml.xml"> SVG results </a>
+                <div class="col-1"></div>
+                <button class="col-2 btn btn-primary" >
+                  <a href="lab1/res/xml.xml"> MathJax results </a>
                 </button>
+              </div>
             </div>
+
+            <div class="list-group-item container">
+              <div class="row">
+                <button class="col-1 btn btn-link">
+                  <a class="h5" href="http://kodaktor.ru/svg.pdf"> Task 2 </a>
+                </button>
+                <div class="col-1"></div>
+                <button class="col-2 btn btn-primary" >
+                  <a href="lab1/res/xml.xml"> SVG results </a>
+                </button>
+              </div>
+            </div>
+
+          </div>
+
         </div>
+<!--        <div class="list-group-item">-->
+<!--         Yet to be filled -->
+<!--        </div>-->
+      </div>
     </div>
+  </div>
+</div>
 </body>
 </html>
