--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </button>
                 <div class="col-1"></div>
                 <button class="col-2 btn btn-primary" >
-                  <a href="lab1/res/xml.xml"> SVG results </a>
+                  <a href="lab2/res/svg.xml"> SVG results </a>
                 </button>
               </div>
             </div>
