Added author info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container p-5">
   <div class="row justify-content-center p-5">
-    <h3 class="col text-center"> Aynur Rakhmanov </h3>
+    <h4 id="author" title="GossJS" class="col text-center">Айнур Рахманов</h4>
   </div>
   <div class="row p-5">
     <div class="col">
